@@ -23,19 +23,12 @@ otherwise bst may respond to them instead. e.g.
 Use the --build option to create a temporary sysroot for
 building the element instead.
 .PP
-Use the --sysroot option with an existing failed build
-directory or with a checkout of the given target, in order
-to use a specific sysroot.
-.PP
 If no COMMAND is specified, the default is to attempt
 to run an interactive shell.
 .SH OPTIONS
 .TP
 \fB\-b,\fP \-\-build
 Stage dependencies and sources to build
-.TP
-\fB\-s,\fP \-\-sysroot DIRECTORY
-An existing sysroot
 .TP
 \fB\-\-mount\fP HOSTPATH PATH
 Mount a file or directory into the sandbox
