@@ -307,48 +307,6 @@ def test_workspace_visible(cli, datafiles):
     assert result.output == workspace_hello
 
 
-# Test that '--sysroot' works
-@pytest.mark.datafiles(DATA_DIR)
-@pytest.mark.skipif(not HAVE_SANDBOX, reason="Only available with a functioning sandbox")
-@pytest.mark.xfail(HAVE_SANDBOX == "buildbox-run", reason="Not working with BuildBox")
-def test_sysroot(cli, tmpdir, datafiles):
-    project = str(datafiles)
-    base_element = "base/base-alpine.bst"
-    # test element only needs to be something lightweight for this test
-    test_element = "script/script.bst"
-    checkout_dir = os.path.join(str(tmpdir), "alpine-sysroot")
-    test_file = "hello"
-
-    # Build and check out a sysroot
-    res = cli.run(project=project, args=["build", base_element])
-    res.assert_success()
-    res = cli.run(project=project, args=["artifact", "checkout", base_element, "--directory", checkout_dir])
-    res.assert_success()
-
-    # Mutate the sysroot
-    test_path = os.path.join(checkout_dir, test_file)
-    with open(test_path, "w") as f:
-        f.write("hello\n")
-
-    # Shell into the sysroot and check the test file exists
-    res = cli.run(
-        project=project,
-        args=[
-            "shell",
-            "--build",
-            "--sysroot",
-            checkout_dir,
-            test_element,
-            "--",
-            "grep",
-            "-q",
-            "hello",
-            "/" + test_file,
-        ],
-    )
-    res.assert_success()
-
-
 # Test system integration commands can access devices in /dev
 @pytest.mark.datafiles(DATA_DIR)
 @pytest.mark.skipif(not HAVE_SANDBOX, reason="Only available with a functioning sandbox")
